--- a/TODO.txt
+++ b/TODO.txt
@@ -13,8 +13,6 @@ STILL TODO:
   - make it scroll by one <li> at a time, instead; or maybe
   - bring back the little dots along the bottom that did exactly that
 
-* auction_carousel_view doesn't indicate that a hand has been abandoned.
-
 * We send an SSE event containing the hand-div on every play, but about half of that div -- all the "toast" stuff -- never varies.  We'd save perhaps 1K per event if we only sent the four suit divs.
 
   Dunno if this would save significant time, memory, or CPU; but it's an idea.
@@ -180,6 +178,19 @@ MAYBE TODO:
 * Reconsider sqlite -- [this](https://gcollazo.com/optimal-sqlite-settings-for-django/) strongly suggests it's viable for smallish projects such as this.
 
 DONE:
+* carousel_style_auction doesn't indicate that a hand has been abandoned.
+
+  Repro steps:
+  - `just restore < ../bob-is-ready-to-bid-hand-1.sql`
+  - `just migrate && just --no-deps runme`
+  - go to <http://localhost:9000/hand/1/>; log in as bob
+  - new browser window with new identity; log in as _kima
+  - have _kima "Splitsville"
+  - observe that both browser windows, even after hitting F5, still show the interactive view.
+    They should should the everything-read-only view, with a big indicator that the hand was abandoned.
+
+  Done, but it could be better: currently you have to hit F5 to turn the interactive view into the everything-read-only view.  Ideally, the browser would do that for you as soon as the hand gets abandoned; this should be easy with another SSE event and another clause in the javascript magic.
+
 * At the end of a hand, display a button (where "Next board plz" used to be) that takes us to the current hand.
 
 * Perhaps I should restore the "legacy" hand view, but only for observers (i.e., users who are logged in, but haven't signed up for the tournament).  That way I can ensure that the carousel hand view is seen only by authenticated users, and thus can refer to `user.player` in its template.
