--- a/TODO.txt
+++ b/TODO.txt
@@ -7,19 +7,7 @@ STILL TODO:
 
 * everything-read-only view should update automatically via SSE, just as the interactive views do.
 
-* *STILL* rethink permissions.
-
-  I've done this like six times, and I guess it's slowly getting better, but it's still not clean.
-
-  I need *one* bit of code that answers the question: can this user see this bit of this hand?
-
-  `_error_response_or_viewfunc` and `Board.relationship_to` are sorta groping their way there.
-
-  I've considered using [django's built-in permissions](https://docs.djangoproject.com/en/5.1/topics/auth/default/#topic-authorization) to control access to hands, rather than doing it "by hand" (haw haw) as I'm currently doing; but it occurs to me that that stuff likely only controls access to model instances, whereas I need to control access to the individual holdings of a single board instance.
-
-  One example: in prod, if you're not logged in, <https://bridge.offby1.info/hand/55/> yells at you: `Anonymous users like AnonymousUser can view only those boards that have been fully played`.  However, the associated tournament is complete, so it should let me see it.
-
-  I've already got this logic right somewhere else, but apparently whatever tries to render that page isn't using it.
+* *STILL* rethink permissions.  See `docs/view-and-control.org`.
 
 * scrolling from my hand, through the dummy, to the current trick, can be tedious if both hands have a long suit.  Clicking the little left'n'right arrows doesn't scroll by the entire <li>; instead it seems to scroll by the width in pixels of the visible area.  This is a reasonable thing for a scrollbar to do, but it's not convenient here.  So either
   - make it scroll by one <li> at a time, instead; or maybe
