--- a/TODO.txt
+++ b/TODO.txt
@@ -3,6 +3,17 @@ IN PROGRESS:
 STILL TODO:
 * Think hard about that limit of 40 postgresql connections -- wouldn't that mean I could never have more than 40 people playing at once?
 
+* After we've finished a hand, we see the _everything_read_only view. Sometimes that view shows a link to the current hand; but sometimes it doesn't.  I assume the latter happens when we're waiting for the next round to start.  Reloading the page (eventually) causes that link to appear; but this page should have the usual "listen for an SSE and update itself" logic, just for that link.
+
+* There's something fishy about dates in the admin page; I haven't narrowed it down.  But something weird happened just now: I started a tournament normally, with a single human and (I guess) 7 bots.  I was bored, so I used the admin page to change the tempo; then  when I reloaded a web page, it said
+
+  ```
+  AssertionError at /hand/1/
+  How do I (Board #1 t#1, group A, Neither side vulnerable, dealt by North) even exist if the tournament signup deadline hasn't yet passed?!
+  ```
+
+  Which says to me that the date forms in the admin page were set to something weird, and by saving my "tempo_seconds" change, I also inadvertently messed up the deadlines.
+
 * Consider switching from "django-types" to "django-stubs", because the former still doesn't know that the HttpResponse class has a "text" attribute, whereas [the latter does](https://github.com/typeddjango/django-stubs/commit/c3b4a7a7189ce7591b097ba54287e0d9c956fafe).
 
 * everything-read-only view should update automatically via SSE, just as the interactive views do.
