--- a/TODO.txt
+++ b/TODO.txt
@@ -9,11 +9,15 @@ STILL TODO:
 
   Notes from a week of struggling with performance monitoring:
 
-  - Some of the tools are flaky, which wasted my time.  Specifically: pyinstrument consumes so much memory that it's not worth using; and I've blown through my free-tier quota on Sentry, so I can't use that for profiling.
+  - Almost all the tools are flaky, which wasted my time.  Specifically: pyinstrument consumes so much memory that it's not worth using; and I've blown through my free-tier quota on Sentry, so I can't use that for profiling.
 
     Also, I was able to get self-hosted sentry working *somewhat*, but it doesn't offer profiling.  No idea if that's a bug, or what.  I've since shut down the VM on which I'd had it running, since it was kind of expensive.
 
   - In prod, with 64 players (a "16x16" movement), performance is, bad, but (surprisingly) not awful.
+
+  - The grafana suite, and in particular "pyroscope", are the only things I've found that even *might* be helpful.
+
+* app:hand-list should have a way to filter the rows by tournament number
 
 * I wonder if using redis as the store for django-eventstream would noticeably improve things -- currently we use our database, and sending an event does a *lot* of queries.
 
@@ -67,8 +71,6 @@ STILL TODO:
   Of course, I better censor the events so that they don't reveal the calls, or the cards played, to players who haven't yet played that board.
 
   This *might* be obviated by all the work I'm doing on the "carousel-via-css" branch.
-
-* app:hand-list should have a way to filter the rows by tournament number
 
 * Allow players to register an email address, and once they've done so, let them see hands in progress in tournaments in which they're not playing.
 
