--- a/TODO.txt
+++ b/TODO.txt
@@ -8,7 +8,7 @@ STILL TODO:
 * consider making the cheating bot its own docker container, and removing daemontools
 * The interactive hand was showing mojibake instead of the left- and right-chevrons :-(
 * The interactive hand was frequently failing to highlight the cards panel, and similarly to activate the cards.  Almost as if it hadn't gotten the HTML message.
-  - since I now have a better idea of how django-eventstream works, maybe the JS in my pages needs to handle the "stream-reset" event
+  - since I now have a better idea of how django-eventstream works (see [docs/downtime-study-guide.txt]), maybe the JS in my pages needs to handle the "stream-reset" event
 * Since I seem to be abandoning the api-bot, ensure we have tests that cover the endpoint that it calls (serialized-hand, call-post-view, call-play-view).
 * Put the tournament's tempo in the tournament detail page (it's already in the tournament *list* page).
 * The "model inserts" panel in prometheus is reading zeroes for everything; no idea why.
