--- a/TODO.txt
+++ b/TODO.txt
@@ -22,9 +22,7 @@ STILL TODO:
 
   This will probably require selenium :-(
 
-* Performance, as usual:
-
-  I've eliminated redundant queries from a number of views (by simply looking at the django debug toolbar's "SQL" panel).  But there are more to do -- in particular, "serialized-hand-detail", "call-post", and "play-post" are the ones that the bots use, and hence matter the most during a stress run.
+  chatgpt suggests [locust](https://docs.locust.io/en/stable/installation.html), and I see that [nanorepublica](https://discord.com/channels/856567261900832808/1172942795414183976/1197234202500943963) and [Pat](https://discord.com/channels/856567261900832808/1172942795414183976/1370703160770953257) recommend it.
 
 * Think hard about that limit of 40 postgresql connections -- wouldn't that mean I could never have more than 40 people playing at once?
 
